--- a/html/mark.html
+++ b/html/mark.html
@@ -1,19 +1,24 @@
+<!DOCTYPE html>
 <html lang="en">
-<style>
-  .mark-wrapper {
-    margin-top: 80px;
-    margin-bottom: 30px;
-    text-align: center;
-  }
-
-  .mark-wrapper div {
-    display: inline-block;
-    padding: 10px 20px;
-    margin: 0 10px;
-    border: 1px solid #ddd;
-  }
-</style>
-
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
+  <style>
+    .mark-wrapper {
+      margin-top: 80px;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    .mark-wrapper div {
+      display: inline-block;
+      padding: 10px 20px;
+      margin: 0 10px;
+      border: 1px solid #ddd;
+    }
+  </style>
+</head>
 <body>
   <div class="mark-wrapper">
     <div data-path="/path1" class="mark-target">标记1</div>
@@ -21,5 +26,4 @@
     <div>不可标记</div>
   </div>
 </body>
-
 </html>
